Install files of all extension when installing the library directory
Avoid the confusion that could come if files with a new extensions
are added, see https://github.com/ami-iit/matlab-whole-body-simulator/pull/79 for an example.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,10 +26,7 @@ set(URDF_FILES_DIR ${matlab-whole-body-simulator_SOURCE_DIR}/urdf/RRbot)
 install(
   DIRECTORY ${M_FILES_DIR}
   DESTINATION ${MATLAB_WHOLE_BODY_SIMULATOR_INSTALL_MATLAB_FILESDIR}
-  USE_SOURCE_PERMISSIONS
-  FILES_MATCHING
-  PATTERN "*.m"
-  PATTERN "*.slx")
+  USE_SOURCE_PERMISSIONS)
 
 # Copy robot models
 install(
